# llamaindex_postgres

./: .env.example  .gitignore  Makefile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
pipeline/: ingestion_pipeline.py  vector_pipeline.py
ucl_dbt/: dbt_project.yml
ucl_dbt/models/marts/: mart_players_for_embedding.sql  mart_standings_for_embedding.sql  schema.yml
ucl_dbt/models/staging/: sources.yml  stg_ucl_players.sql  stg_ucl_standings.sql
